changement de <p> à <h1> dans contribute.html
permet d’améliorer le référencement en ayant une structuminal avec titre dans la page (autre que le title qui n’est pas réellement visible pour l’utilisateur)

--- a/src/html/contribute.html
+++ b/src/html/contribute.html
@@ -48,7 +48,7 @@
 
         <section class="container">
             
-            <p class="h1 text-center mb-2">Contribuer</p>
+            <h1 class="h1 text-center mb-2">Contribuer</h1>
             <p class="lead text-center">Le caractère libre / open source du projet invite chaque utilisateur à y contribuer. Vous trouverez sur cette page les documentations de fonctionnement du téléphone ainsi que les indications pour participer, à votre tour, à ce vaste projet.</p>
 
             <div class="card">
