--- a/src/html/home.html
+++ b/src/html/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accueil — Paxo</title>
+    <title>Paxo - Le renouveau du téléphone</title>
 
     <!-- css -->
     <link rel="stylesheet" href="../css/styles.css">
