--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Autres — Paxo</title>
+    <title>Découvrez d'autres créations — Paxo</title>
 
     <!-- css -->
     <link rel="stylesheet" href="../css/styles.css">
@@ -48,7 +48,7 @@
 
         <section class="container">
             
-            <p class="h1 text-center mb-2">Autres projets</p>
+            <h1 class="h1 text-center mb-2">Ici, d'anciens projets accessible pour tous</h1>
             <p class="lead text-center">Le projet Paxo porte bon nombre d'autres projets rassemblés sur cette page. Ils sont tous open source et nous vous invitons, de fait, à y contribuer !</p>
 
             <div id="projects_container">
