--- a/src/html/step-end.html
+++ b/src/html/step-end.html
@@ -54,7 +54,7 @@
                 <h1 class="h1 mb-2">Votre montage est terminé !</h1>
                 <p class="lead mb-3">Vous pouvez désormais profiter de votre PaxoPhone à votre guise ! N'hésitez pas à nous envoyer une photo de votre montage sur <a href="https://www.instagram.com/gabriel_rochet_paxo/">notre compte instagram</a>.</p>
 
-                <img style="width: 100%; max-width: 600px; display: block; margin: 0 auto;" src="https://media2.giphy.com/media/cQNRp4QA8z7B6/giphy.gif?cid=ecf05e47ohjkohlyjituly1p8eksruightei9lq4e60ghwoz&ep=v1_gifs_search&rid=giphy.gif&ct=g" alt="" srcset="">
+                <img style="width: 100%; max-width: 600px; display: block; margin: 0 auto;" src="https://media2.giphy.com/media/cQNRp4QA8z7B6/giphy.gif?cid=ecf05e47ohjkohlyjituly1p8eksruightei9lq4e60ghwoz&ep=v1_gifs_search&rid=giphy.gif&ct=g" alt="GIF représentant sacha qui a réussi une tâche" srcset="">
 
             </div>
 
