--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paxo - Le renouveau du téléphone</title>
+    <meta name="description"  content="Le PaxoPhone se veut être un téléphone autonome des grandes structures, accessible à tous et ludique.">
 
     <!-- css -->
     <link rel="stylesheet" href="../css/styles.css">
@@ -23,7 +24,7 @@
 
         <nav class="nav">
             <ul class="nav-list">
-                <li class="nav-item"><a class="nav-link" href="home.html">Accueil</a></li>
+                <li class="nav-item"><a class="nav-link" href="home.html">Accueila </a></li>
                 <li class="nav-item"><a class="nav-link" href="assembly.html">Montage</a></li>
                 <li class="nav-item"><a class="nav-link" href="contribute.html">Contribuer</a></li>
                 <li class="nav-item"><a class="nav-link" href="https://discord.gg/84Qsp6tUSK">Discord</a></li>
