--- a/src/html/assembly.html
+++ b/src/html/assembly.html
@@ -4,6 +4,7 @@
     <meta charset="utf8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assemblage du PaxoPhone</title>
+    <meta name="description" content="PaxoPhone est accessible à tous, avec un peu de maétiel et quelques connaissance, vous trouverez ici comment le confectionner.">
 
     <!-- css -->
     <link rel="stylesheet" href="../css/styles.css">
