--- a/src/html/index.html
+++ b/src/html/index.html
@@ -24,7 +24,7 @@
 
         <nav class="nav">
             <ul class="nav-list">
-                <li class="nav-item"><a class="nav-link" href="home.html">Accueila </a></li>
+                <li class="nav-item"><a class="nav-link" href="home.html">Accueil</a></li>
                 <li class="nav-item"><a class="nav-link" href="assembly.html">Montage</a></li>
                 <li class="nav-item"><a class="nav-link" href="contribute.html">Contribuer</a></li>
                 <li class="nav-item"><a class="nav-link" href="https://discord.gg/84Qsp6tUSK">Discord</a></li>
