--- a/src/html/assembly.html
+++ b/src/html/assembly.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index">
     <title>Assemblage du PaxoPhone</title>
     <meta name="description" content="PaxoPhone est accessible à tous, avec un peu de maétiel et quelques connaissance, vous trouverez ici comment le confectionner.">
 
