--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index">
     <title>Paxo - Le renouveau du téléphone</title>
     <meta name="description"  content="Le PaxoPhone se veut être un téléphone autonome des grandes structures, accessible à tous et ludique.">
 
