--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="utf8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index"> 
     <title>Découvrez d'autres créations — Paxo</title>
+    <meta name="description" content="Découvrez d'autres projet signé Paxo facile à recréer.">
 
     <!-- css -->
     <link rel="stylesheet" href="../css/styles.css">
