--- a/src/html/step-end.html
+++ b/src/html/step-end.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex">
     <title>Terminé ! — Paxo</title>
-
     <!-- css -->
     <link rel="stylesheet" href="../css/styles.css">
 
