--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index">
     <title>Contact — Paxo</title>
-    <meta name="description" content="Vous pouvez nous contacter en soumettant ce questionnaire."
+    <meta name="description" content="Vous pouvez nous contacter en soumettant ce questionnaire.">
 
     <!-- css -->
     <link rel="stylesheet" href="../css/styles.css">
